# texlive-auto-package-install

./: .clang-format  .gitignore  .luarc.json  .woodpecker.yaml  Makefile  README.md  build.lua  pyproject.toml
documentation/: lwc-manual.mkxl  manual.tex
scripts/: generate-database.py
source/: auto-package-install-curl.h  auto-package-install.lua  auto-package-install.sty  auto-package-network.lua  network-install.lua  network-install.sty  network-install__ffi.lua  network-install__filesystem.lua  network-install__hooks.lua  network-install__network.lua  network-install__tex.lua
source/c/: 0001-Add-new-libhydrogen-module.patch  Makefile  lhydrogenlib.c
source/tex/: network-install-ctan.lua  network-install-database.lua  network-install-files.lua  network-install.lua  network-install.sty  network-install__curl.h  network-install__ffi.lua  network-install__filesystem.lua  network-install__hooks.lua  network-install__hydrogen.lua  network-install__network.lua
texmf/doc/lualatex/network-install/: network-install-doc.tex
texmf/scripts/network-install/: libhydrogen.universal-darwin.dylib  libhydrogen.x86_64-darwinlegacy.dylib  network-install-generate-database.py
texmf/source/lualatex/network-install/: lhydrogenlib.c  third-party
texmf/tex/lualatex/auto-package-install/: auto-package-install.lua  auto-package-install.sty
texmf/tex/lualatex/network-install/: network-install-ctan.lua  network-install-database.lua  network-install-files.lua  network-install.lua  network-install.sty  network-install__curl.h  network-install__ffi.lua  network-install__filesystem.lua  network-install__hooks.lua  network-install__hydrogen.lua  network-install__network.lua  network-install__tex.lua
